# salary-prediction

./: .env.example  .gitignore  Makefile  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: data-pipeline.instructions.md  fastapi.instructions.md  llm-integration.instructions.md  model-training.instructions.md  streamlit-dashboard.instructions.md  supabase.instructions.md
config/: settings.py
dashboard/: app.py
dashboard/components/: charts.py  filters.py
dashboard/pages/: insights.py  overview.py  predictions.py  reveal_your_true_salary.py
deployment/docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
deployment/scripts/: setup_supabase.sql  upload_model.py
docs/: leaf-prediction-explained.md  salary-range-design.md  supabase-setup.md
notebooks/: eda.ipynb
src/api/: main.py
src/api/routes/: prediction.py
src/api/schemas/: salary.py
src/data/: cleaning.py  ingestion.py  preprocessing.py
src/database/: client.py  crud.py
src/features/: engineering.py
src/llm/: client.py  exceptions.py  groq_client.py  narrative.py  ollama_client.py
src/models/: evaluate.py  predict.py  train.py
src/visualizations/: _labels.py  charts.py  eda.py
tests/test_api/: test_prediction.py
tests/test_data/: test_cleaning.py  test_engineering.py
tests/test_llm/: test_narrative.py
tests/test_models/: test_train.py
